...
            game.smoothPanTo(cx / alive.length, cy / alive.length);
            store.lastRecalledGroup.value = group;
            audio.selectUnit();
            game.syncUIStore();
          }}
        />
        <canvas ref={gameCanvasRef} id="game-canvas" />
        <canvas ref={fogCanvasRef} id="fog-canvas" />
        <div
          ref={dayNightRef}
          id="day-night-overlay"
          class="absolute inset-0 pointer-events-none z-10"
        />
...
